--- a/sass/main.scss
+++ b/sass/main.scss
@@ -97,14 +97,18 @@ h1{
     background: $Back;
     position: relative;
     margin: 3% 0%;
-    padding: 3%;
     border-radius: 4% 4% 4% 4%/15% 15% 15% 15%;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    height: 47px;
     overflow:hidden;
-    text-overflow:ellipsis;
-    white-space: nowrap;
-    height: 40px;
     animation: show 1000ms ease-in-out both;
+    box-sizing: border-box;
+    .choix{
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        width: calc(100% - 50px);
+    }
     p{
         margin: 1% 0%;
     }
@@ -117,10 +121,10 @@ h1{
         font-weight: 400;
     }
     .prix{
-        margin-left: auto;
-        margin-top: 7%;
-        margin-right: 3%;
         font-weight: 600;
+        padding: 0% 4%;
+        display: flex;
+        align-items: flex-end;
     }
     .valid{
         visibility: hidden;
@@ -135,8 +139,8 @@ h1{
     .fas{
         color: #FFF;
         position: absolute;
-        left: 11px;
-        top: 27px;
+        left: 21%;
+        top: 51%;
         transform: rotate(95deg);
     }
     &.n2{
@@ -154,7 +158,7 @@ h1{
             padding-inline: 17px;
             margin: 0% 0% 0% 5%;
             transform-origin: right;
-            transform: scale(1.6);
+            transform: scale(1.7);
         }
         .fas{
             transition: 500ms;
